...

  Scaffold(
      modifier = Modifier.testTag(TestTags.OverviewScreen),
      containerColor = TodoColors.Background,
      topBar = {
        TopAppBar(
            title = { Text("Your To-Dos", color = TodoColors.OnBackground) },
            colors = TopAppBarDefaults.topAppBarColors(containerColor = TodoColors.Background))
      },
      floatingActionButton = {
        FloatingActionButton(
            onClick = onAddClicked,
            containerColor = MaterialTheme.colorScheme.primary,
...
